--- a/style.css
+++ b/style.css
@@ -18,12 +18,12 @@ h4 {
 }
 
 body {
-    background: white;
+    background: linear-gradient(#61a5e4, #9198e5);
     padding: 0;
     margin: 0;
 }
 
-nav {
+#nav {
     color:rgb(67, 74, 85);
     top:0em;
     width:100%;
@@ -33,26 +33,27 @@ nav {
     z-index: 1;
 }
 
-nav a {
+#nav a {
     color:rgb(255, 255, 255);
     float: left;
     margin-top: 0em;
-    margin-left: 1em;
+    margin-left: 3%;
     font-size: 2.3em;
     text-decoration: none;
 }
 
-nav a h1 {
+#nav a h1 {
     margin: 0em;
 }
 
-nav a:hover{
+#nav a:hover{
     color:rgb(57, 54, 65);
 }
 
 #links {
     float: right;
     text-align: right;
+    width: 25em;
 }
 
 #links a{
@@ -65,7 +66,6 @@ nav a:hover{
 
 #links a:hover{
     color:rgb(57, 54, 65);
-    font-weight: 500;
 }
 
 .header {
@@ -77,6 +77,8 @@ nav a:hover{
     padding: 3em;
     padding-left: 15em;
     padding-right: 15em;
+    margin: 3em;
+    margin-top: 6em;
 }
 
 #me_container {
@@ -112,4 +114,23 @@ nav a:hover{
 
 .intro h3 {
     font-size: 2.4em;
+}
+
+
+main {
+    
+}
+
+#education {
+    padding: 5em;
+    float: left;
+}
+
+main h3 {
+    margin-top: 0em;
+}
+
+#projects {
+    padding: 5em;
+    float: right;
 }
