--- a/style.css
+++ b/style.css
@@ -4,133 +4,221 @@
 }
 
 * {
-    font-size: 1em;
     font-family: 'Baskervville';
-    letter-spacing: -1px;
+        margin: 0px;
+    padding:0px;
 }
 
-h3 {
-    font-size: 2em;
-}
-
-h4 {
-    font-size: 1.4em
+a {
+    text-decoration: none;
 }
 
 body {
-    background: linear-gradient(#61a5e4, #9198e5);
-    padding: 0;
-    margin: 0;
+    background: #FFFFF0;
 }
 
 #nav {
-    color:rgb(67, 74, 85);
-    top:0em;
+    top:0px;
     width:100%;
-    height: 2.94em;
+    height: 100px;
+    padding: 15px 0px;
     position: fixed;
-    background-color: rgb(146, 168, 240);
+    background-color: #F9F6EE;
     z-index: 1;
+    border-radius: 40px;
+    border-top-left-radius: 0px;
+    border-top-left-radius: 0px;
+    overflow: hidden;
 }
 
-#nav a {
-    color:rgb(255, 255, 255);
-    float: left;
-    margin-top: 0em;
-    margin-left: 3%;
-    font-size: 2.3em;
-    text-decoration: none;
+#nav .title {
+    color:rgb(0, 0, 0);
+    font-size: 24px;
+    text-align: center;
 }
 
-#nav a h1 {
-    margin: 0em;
+#nav .title:hover{
+    color:rgb(79, 75, 90);
 }
 
-#nav a:hover{
-    color:rgb(57, 54, 65);
+#nav .links {
+    text-align: center;
+    width: auto;
+    padding-top: 25px;
 }
 
-#links {
-    float: right;
-    text-align: right;
-    width: 25em;
-}
-
-#links a{
-    color:rgb(255, 255, 255);
-    text-decoration: none;
-    font-size:1.4em;
-    padding: 0.5em;
+#nav .links a{
+    color:rgb(0, 0, 0);
+    font-size:18px;
+    padding: 0px 8px;
     text-align: right;
 }
 
-#links a:hover{
-    color:rgb(57, 54, 65);
+#nav .links a:hover {
+    color:rgb(79, 75, 90);
 }
 
-.header {
-    background-image: url(me_background.jpg);
+#header {
+    background-image: url(img/shimanami_kaido_island.jpg);
     background-position: center;
     background-size: cover;
-    margin-top: 2.94em;
-    overflow:hidden;
-    padding: 3em;
-    padding-left: 15em;
-    padding-right: 15em;
-    margin: 3em;
-    margin-top: 6em;
+    padding: 50px;
+    margin: 150px 200px 50px;
+    color: #FFFFF0;
 }
 
-#me_container {
-    margin: 0em;
+#header .intro .fig_me {
     position: relative;
-    width: 30em;
-    height: 40em;
-    float: left;
-}
-
-#me_container img {
-    width: 30em;
-    height: 40em;
-    overflow: hidden;
-    object-fit:cover;
-}
-
-.intro section{
-    float: right;
-    word-break: break-word;
-    width: 50em;
-    margin-top: 15em;
-}
-
-.intro p, .intro h3 {
-    color: rgb(255, 255, 255);
-    font-weight: bold;
-}
-
-.intro p {
-    font-size: 1.6em;
-}
-
-.intro h3 {
-    font-size: 2.4em;
-}
-
-
-main {
+    width: 400px;
+    height: 400px;
+    margin: 0px auto;
     
 }
 
-#education {
-    padding: 5em;
-    float: left;
+#header .intro .fig_me img {
+    width: 400px;
+    height: 400px;
+    border: 3px solid rgb(56, 130, 190);
+    overflow: hidden;
+    object-fit:cover;
+    border-radius:50%;
 }
 
-main h3 {
-    margin-top: 0em;
+.intro section{
+    min-width: 400px;
+    max-width: 800px;
+    margin: 0px auto;
+}
+
+.intro p, .intro a {
+    color: rgb(255, 255, 255);
+    display: inline-block;
+}
+
+.intro a {
+    width: auto;
+}
+
+.intro a:hover {
+    color: rgb(57, 54, 65);
+}
+
+.intro p {
+    font-size: 20px;
+}
+
+.intro h3 {
+    font-size: 45px;
+    margin: 20px 0px;
+}
+
+#education{
+    margin: 50px;
+    text-align: center;
+    color: #0C0B0A; 
+}
+
+#education h3{
+    padding: 20px 50px;
+    font-size: 45px;
+}
+
+#education .links {
+    padding: 10px 0px;
+    font-size: 22px;
+    overflow: hidden;
+}
+
+#education .links a{
+    color: #0C0B0A;
+}
+
+#education .links a h4 {
+    padding-top: 25px;
+}
+
+#education .links a:hover {
+    color: rgb(79, 75, 90);
+}
+
+#education .img {
+    padding-top: 10px;
+}
+
+#education .img img{
+    padding: 0px 10px;
+    object-fit: cover;
+    width: 230px;
+    height: 230px;
 }
 
 #projects {
-    padding: 5em;
-    float: right;
+    margin: 50px;
+    color: #0C0B0A; 
+    text-align: center;
+}
+
+#projects h3{
+    padding: 20px 50px;
+    font-size: 45px;
+}
+
+#projects .links {
+    padding: 10px 0px;
+    font-size: 22px;
+    overflow: hidden;
+}
+
+#projects .links a {
+    color: #0C0B0A;
+}
+
+#projects .links a h4 {
+    padding-top: 25px;
+}
+
+#projects .links a:hover {
+    color: rgb(79, 75, 90);
+}
+
+#projects .img {
+    padding-top: 10px;
+}
+
+#projects .img img{
+    padding: 0px 10px;
+    object-fit: cover;
+    width: 230px;
+    height: 230px;
+}
+
+footer {
+    background-image: url(img/tokyo_sky_tree_view.jpg);
+    background-position: 50% 68%;
+    background-size: cover;
+    padding: 100px;
+    border-radius: 40px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+}
+
+footer h3 {
+    padding: 20px 50px;
+    font-size: 55px;
+    color:#FFFFF0;
+}
+
+footer .contacts {
+    padding: 50px 0px;
+    text-align: center;
+}
+
+footer .contacts a {
+    padding: 0px 5px;
+}
+
+footer .contacts a img{
+    overflow: hidden;
+    object-fit:cover;
+    border-radius:50%;
 }
