--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
 
 main {
     margin: 130px 0px 50px;
+    min-width: 600px;
 }
 
 main h3{
@@ -44,6 +45,7 @@ This part of the code designs the navigation bar at the top of all pages
 
 #nav {
     top:0px;
+    min-width: 600px;
     width:100%;
     height: 100px;
     padding: 15px 0px;
@@ -139,6 +141,7 @@ Home page about me introduction
 
 .intro h3 {
     font-size: 45px;
+    padding: 0px;
     margin: 20px 0px;
 }
 
@@ -225,6 +228,27 @@ Home page projects_intro section
 }
 
 /*
+Education page
+*/
+
+#education .date {
+    font-style: italic;
+}
+
+#education div {
+    padding: 30px 100px;
+}
+
+#education div .title {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+#education div ul {
+    font-size: 20px;
+}
+
+/*
 Projects page
 */
 
@@ -254,27 +278,6 @@ Projects page
 }
 
 /*
-Education page
-*/
-
-#education .date {
-    font-style: italic;
-}
-
-#education div {
-    padding: 30px 100px;
-}
-
-#education div .title {
-    font-size: 30px;
-    font-weight: bold;
-}
-
-#education div ul {
-    font-size: 20px;
-}
-
-/*
 This part of the code designs the contact me footer at the bottom of all pages
 */
 
@@ -286,6 +289,7 @@ footer {
     border-radius: 40px;
     border-bottom-left-radius: 0px;
     border-bottom-right-radius: 0px;
+    min-width: 600px;
 }
 
 footer h3 {
