--- a/assets/style.css
+++ b/assets/style.css
@@ -53,26 +53,26 @@ This part of the code designs the navigation bar at the top of all pages
     min-width: 600px;
     width:100%;
     height: 100px;
-    padding: 15px 20px; /* Added padding for spacing */
+    padding: 15px 20px;
     position: fixed;
     background-color: #F9F6EE;
     z-index: 1;
     overflow: hidden;
     text-align: center;
-    transition: height 0.3s ease, padding 0.3s ease; /* Add transition for smooth animation */
+    transition: height 0.3s ease, padding 0.3s ease;
     overflow: visible;
 }
 
 #nav.scrolled {
-    height: 60px; /* New height when scrolled */
-    padding: 5px 20px; /* Adjust padding when scrolled */
+    height: 40px;
+    padding: 5px 20px;
 }
 
 #nav .title {
     color:rgb(22, 78, 124);
     font-size: 24px;
     display: inline-block;
-    transition: font-size 0.3s ease; /* Add transition for smooth animation */
+    transition: font-size 0.3s ease;
 }
 
 #nav .title:hover{
@@ -80,73 +80,108 @@ This part of the code designs the navigation bar at the top of all pages
 }
 
 #nav.scrolled .title {
-    font-size: 16px; /* Smaller font size when scrolled */
+    font-size: 16px;
 }
 
 #nav .links {
     text-align: center;
     width: auto;
     padding-top: 25px;
-    transition: padding-top 0.3s ease; /* Add transition for smooth animation */
+    transition: padding-top 0.3s ease;
 }
 
 #nav.scrolled .links {
-    font-size: 10px; /* Smaller font size when scrolled */
-    padding: 0px 6px; /* Adjust padding when scrolled */
+    visibility: hidden;
 }
 
 #nav .links a{
     font-size:18px;
     padding: 0px 8px;
-    transition: font-size 0.3s ease, padding 0.3s ease; /* Add transition for smooth animation */
+    transition: font-size 0.3s ease, padding 0.3s ease;
 }
 
 #nav.scrolled .links a {
-    font-size: 16px; /* Smaller font size when scrolled */
-    padding: 0px 6px; /* Adjust padding when scrolled */
+    font-size: 16px;
+    padding: 0px 6px;
 }
 
 #nav .links a:hover {
     color:rgb(79, 75, 90);
 }
 
-/* Styles for the dropdown container */
 .dropdown {
     position: relative;
     display: inline-block;
 }
 
-/* Styles for the dropdown trigger */
 .drop-trigger {
-    padding: 16px;
-    font-size: 10px;
     cursor: pointer;
-    border: none;
 }
 
-/* Hide the dropdown content by default */
 .dropdown-content {
     display: none;
     position: absolute;
     background-color: #F9F6EE;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-    min-width: 200px;  /* Ensure minimum width */
+    min-width: 200px;
 }
 
-/* Style the links inside the dropdown */
 .dropdown-content a {
     margin: 12px;
     text-decoration: none;
     display: block;
-    box-sizing: border-box;  /* Ensure padding is included in width */
-    text-align: left;  /* Ensure text is aligned to the left */
+    box-sizing: border-box;
+    text-align: left;
 }
 
-/* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
     display: block;
 }
+
+/* Side bar */
+
+#sidebar {
+    visibility: hidden;
+    position: fixed;
+    margin-top: -85px;
+    background-color: #EEF1F9;
+    height: 1000px;
+    width: 18%;
+    text-align: center;
+    display: inline-block;
+}
+
+#sidebar.scrolled {
+    visibility: visible;
+}
+
+#sidebar .links{
+    height: 90%;
+    margin: 40px;
+}
+
+#sidebar .links a{
+    display: block;
+    font-size: 20px;
+    padding: 10px 0;
+}
+
+#sidebar .links a:hover{
+    color:rgb(79, 75, 90);
+}
+
+#sidebar .line{
+    border-bottom: 0px solid #888;
+    margin: 0px 40%;
+}
+
+#sidebar .dropdown-content a{
+    font-size: 15px;
+    padding: 0px;
+    margin: 12px;
+}
+
 /*
 Home page about me introduction
 */
