--- a/assets/style.css
+++ b/assets/style.css
@@ -186,10 +186,9 @@ This part of the code designs the navigation bar at the top of all pages
     margin-top: -100px;
     background-color: #EEF1F9;
     height: 1000px;
-    width: 18%;
+    width: 300px;
     text-align: center;
     display: inline-block;
-    z-index: 1;
 }
 
 #sidebar.visible {
