--- a/mywebsite/src/assets/css/components/navbar.css
+++ b/mywebsite/src/assets/css/components/navbar.css
@@ -1,7 +1,7 @@
 #nav {
     top:0px;
     width:100%;
-    height: 100px;
+    height: 120px;
     padding: 15px 0px;
     position: fixed;
     background-color: #F9F6EE;
@@ -13,7 +13,8 @@
 
 #nav.scrolled {
     height: 40px;
-    padding: 5px 0px;
+    padding: 0px;
+    padding-bottom: 10px;
 }
 #nav .nav_content{
     text-align: center;
@@ -53,25 +54,25 @@
     color:rgb(79, 75, 90);
 }
 
-.dropdown {
+#nav .dropdown {
     position: relative;
     display: inline-block;
 }
 
-.drop-trigger {
+#nav .drop-trigger {
     cursor: pointer;
 }
 
-.dropdown-content {
+#nav .dropdown-content {
     display: none;
     position: absolute;
     background-color: #F9F6EE;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-    width: 200px;
+    width: 250px;
 }
 
-.dropdown-content a {
+#nav .dropdown-content a {
     margin: 12px;
     text-decoration: none;
     display: block;
@@ -79,6 +80,6 @@
     text-align: left;
 }
 
-.dropdown:hover .dropdown-content {
+#nav .dropdown:hover .dropdown-content {
     display: block;
 }
