--- a/mywebsite/src/assets/css/pages/home.css
+++ b/mywebsite/src/assets/css/pages/home.css
@@ -22,6 +22,7 @@
 #intro .img_container {
     width: 400px;
     height: 400px;
+    margin: 0px;
 }
 
 #intro .img_container img {
@@ -29,4 +30,12 @@
     border-radius:50%;
     width: 98%;
     height: 98%;
+}
+
+.img_container{
+    margin: 6px;
+}
+
+a.img_container:hover img{
+    filter: brightness(90%);
 }
