--- a/mywebsite/src/assets/css/components/navbar.css
+++ b/mywebsite/src/assets/css/components/navbar.css
@@ -1,48 +1,48 @@
 #nav {
     top:0px;
     width:100%;
-    height: 120px;
-    padding: 15px 0px;
     position: fixed;
+    height: auto;
     background-color: #F9F6EE;
     z-index: 3;
     transition: height 0.3s ease, padding 0.3s ease;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    min-width: 800px;
 }
-
-#nav.scrolled {
-    height: 40px;
-    padding: 0px;
-    padding-bottom: 10px;
-}
-#nav .nav_content{
+#nav .nav_content {
+    margin: 0 auto;
     text-align: center;
-    display: inline;
-    font-size: 18px;
+}
+#nav .nav_content .top-row{
+    display: flex;
+    justify-content: center;
+    padding : 10px 0;
+    align-items: center;
+    position: relative;
 }
 
 #nav h1 {
     transition: font-size 0.3s ease;
-    font-size: 50px;
-    margin: 0px;
+    font-size: 40px;
+    margin: 0;
 }
 
 #nav h1:hover{
     color:rgb(79, 75, 90);
 }
 
-#nav.scrolled h1 {
-    font-size: 35px;
-}
-
-#nav .links {
-    padding-top: 25px;
-    transition: padding-top 0.3s ease;
+#nav .nav_content .links {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    width: 100%;
+    padding: 10px 0px;
+    transition: padding 0.3s ease;
 }
 
 #nav.scrolled .links {
     visibility: hidden;
+    height:0;
+    padding: 0;
 }
 
 #nav .links a{
@@ -70,6 +70,9 @@
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     width: 250px;
+    top: 100%; 
+    left: 0;
+    padding: 10px;
 }
 
 #nav .dropdown-content a {
@@ -82,4 +85,82 @@
 
 #nav .dropdown:hover .dropdown-content {
     display: block;
+}
+
+#nav.scrolled .menu-icon{
+    cursor: pointer;
+    display:flex;
+    flex-direction: column;
+    margin: 10px 20px;
+    visibility: hidden;
+    position: absolute;
+    left: 0;
+}
+#nav.scrolled .menu-icon:hover .bar {
+    background-color: rgb(79, 75, 90);
+}
+#nav.scrolled .menu-icon .bar{
+    width: 25px;
+    height: 3px;
+    background-color: rgb(22, 78, 124);
+    margin: 4px 0;
+}
+
+@media (max-width: 1400px) {
+    #nav.scrolled {
+        padding-top:0;
+        height:auto;
+    }
+    #nav.scrolled .menu-icon{
+        visibility: visible;
+    }
+    #nav.scrolled #nav-title{
+        flex: 1 -20px;
+    }
+    #nav.scrolled .links{
+        height: 0;
+        padding: 0;
+    }
+    #nav.scrolled .open .bar:nth-child(1) {
+        transform: rotate(45deg);
+        width: 31px;
+        top: 50%;
+        left: 0;
+        transform-origin: left;
+        background-color: rgb(79, 75, 90);
+    }
+    
+    #nav.scrolled .open .bar:nth-child(2) {
+        opacity: 0;
+    }
+    
+    #nav.scrolled .open .bar:nth-child(3) {
+        transform: rotate(-45deg);
+        width: 31px;
+        top: 50%;
+        left: 0;
+        transform-origin: left;
+        background-color: rgb(79, 75, 90);
+    }
+    #nav.scrolled .links-open {
+        visibility: visible;
+        height: auto;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 10px;
+        transition: height 0.3s ease, padding 0.3s ease, margin-top 0.3s ease;
+    }
+    #nav.scrolled .links-open a,
+    #nav.scrolled .links .dropdown{
+        padding: 8px;
+        border-bottom: 0.01px solid black;
+        transition: border-bottom 1s ease-in-out, padding 0.3s ease;
+    }
+    #nav.scrolled .links .dropdown:last-child,
+    #nav.scrolled .links .dropdown .drop-trigger,
+    #nav.scrolled .links .dropdown a{
+        border: none;
+        margin: 0;
+    }
 }
