--- a/mywebsite/src/assets/css/main.css
+++ b/mywebsite/src/assets/css/main.css
@@ -45,13 +45,12 @@ a {
     color: rgb(22, 78, 124);
 }
 
-.main {
-    margin: 120px 0px 0px;
+#root {
+    min-width: 600px;
 }
 
-.anchor {
-    position: absolute;
-    margin: -150px;
+.main {
+    margin: 120px 0px 0px;
 }
 
 .img_container {
@@ -70,15 +69,13 @@ img {
 
 .section {
     margin: 0px auto;
-    padding: 50px;
-    min-width: 800px;
+    padding: 50px 0px;
     max-width: 1200px;
     height: auto;
 }
 
 .content{
-    min-width: 600px;
-    max-width: 1000px;
+    max-width: 1100px;
     display: block;
     margin: 25px auto;
     text-align: center;
