--- a/mywebsite/src/assets/css/pages/projects.css
+++ b/mywebsite/src/assets/css/pages/projects.css
@@ -1,3 +1,8 @@
+#projects .anchor{
+    position: absolute;
+    margin:-100px;
+}
+
 #projects a:hover {
     color: rgb(79, 75, 90);
 }
@@ -6,17 +11,54 @@
     font-style: italic;
 }
 
-#projects h2{
+#projects h2 {
     text-align: left;
 }
 
-#projects h3{
+#projects h3 {
     text-align: left;
     margin-left: 20px;
 }
 
-#projects .description {
-    margin: 30px 0px;
+#project {
+    margin: 0;
     display: block;
+    padding: 0px;
+    height: auto;
+    max-width: none;
+}
+
+#project h4 {
     text-align: left;
+    margin: 0;
+}
+
+#project .content {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    height: auto;
+    text-align: left;
+    max-width: none;
+}
+
+#project .description {
+    flex: 1 1 55%;
+    width: 100%;
+    margin-right: 50px;
+    padding: 0px;
+}
+
+#project .video-container {
+    flex: 1 1 40%;
+    margin: auto;
+    position: relative;
+    aspect-ratio: 16/9;
+    max-width: 800px;
+    height: auto;
+}
+
+#project .video-container .video {
+    width: 100%;
+    height: 100%;
 }
