--- a/mywebsite/src/assets/css/pages/projects.css
+++ b/mywebsite/src/assets/css/pages/projects.css
@@ -62,3 +62,16 @@
     width: 100%;
     height: 100%;
 }
+
+#project .graph_container {
+    text-align: center;
+}
+#project .graph_container img {
+    width: 100%;
+    height: auto;
+    margin: 10px;
+}
+#project .graph_container img:hover {
+    transform: scale(1.2);
+    transition: transform 0.5s ease;
+}
