--- a/mywebsite/src/assets/css/pages/projects.css
+++ b/mywebsite/src/assets/css/pages/projects.css
@@ -63,8 +63,20 @@
     height: 100%;
 }
 
-#project .graph_container {
+#project .content .graphs {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    height: auto;
     text-align: center;
+    max-width: none;
+}
+
+#project .graph_container {
+    flex: 1;
+    text-align: center;
+    min-width: 300px;
+    max-width: 500px;
 }
 #project .graph_container img {
     width: 100%;
@@ -72,6 +84,5 @@
     margin: 10px;
 }
 #project .graph_container img:hover {
-    transform: scale(1.2);
-    transition: transform 0.5s ease;
+    filter: brightness(95%);
 }
