--- a/mywebsite/src/assets/css/pages/education.css
+++ b/mywebsite/src/assets/css/pages/education.css
@@ -3,11 +3,97 @@
 }
 
 #education h2{
-    text-align: left;
+    text-align: center;
 }
 
 #education .description {
-    margin: 30px 0px;
+    margin: 20px 0px;
+    padding: 40px;
     display: block;
     text-align: left;
+    border: 1px solid black;
+}
+
+#education .top-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: auto;
+}
+
+#education .top-row .school-container {
+    width: 50px;
+    height: auto;
+    flex-shrink: 0;
+}
+
+#education .top-row .school-container img {
+    width: 100%;
+    height: auto;
+    box-shadow: none;
+}
+
+#education .top-row .school-container img:hover {
+    filter:brightness(0.9);
+    transform: scale(1.05);
+    transition: transform 0.3s ease;
+}
+
+#education .description h4{
+    margin: 0;
+}
+
+#education .description#oc-content li{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+#education .description#oc-content li p{
+    margin: 0;
+}
+
+#education .coursera_container {
+    margin-right : 10px;
+    width: 40px;
+    height: auto;
+    flex-shrink: 0;
+}
+
+#education .coursera_container img {
+    width: 100%;
+    height: auto;
+    border-radius: 20px;
+    box-shadow: none;
+}
+#education .coursera_container img:hover {
+    filter:brightness(0.9);
+    transform: scale(1.05);
+    transition: transform 0.3s ease;
+}
+
+#education .description .images {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    height: auto;
+    text-align: center;
+}
+
+#education .image-container {
+    flex: 1;
+    text-align: center;
+    min-width: 400px;
+    margin: 10px;
+}
+#education .image-container img {
+    width: 100%;
+    height: auto;
+    max-height: 350px;
+    object-fit: cover;
+    object-position: center;
+}
+#education .image-container img:hover {
+    filter: brightness(95%);
 }
