--- a/mywebsite/src/assets/css/components/sidebar.css
+++ b/mywebsite/src/assets/css/components/sidebar.css
@@ -13,6 +13,7 @@
 #sidebar.scrolled {
     visibility: visible;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    opacity: 0.8;
 }
 
 #sidebar .sidebar_content{
