--- a/mywebsite/src/assets/css/pages/education.css
+++ b/mywebsite/src/assets/css/pages/education.css
@@ -13,6 +13,7 @@
     text-align: left;
     border: 1px solid black;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
 #education .top-row {
@@ -88,13 +89,20 @@
     max-width: 400px;
     min-width: 300px;
     height: auto;
-    margin: auto 10px;
+    margin: auto 20px;
 }
+
 #education .image-container img {
     object-fit: cover;
     object-position: center;
     aspect-ratio: 16/9;
 }
+
 #education .image-container img:hover {
     filter: brightness(95%);
+}
+
+#education .image-container figcaption {
+    font-style: italic;
+    margin: 10px;
 }
