--- a/mywebsite/src/assets/css/pages/projects.css
+++ b/mywebsite/src/assets/css/pages/projects.css
@@ -24,6 +24,7 @@
     max-width: none;
     border: 0.5px solid black;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
 #project .top-row {
@@ -86,6 +87,7 @@
     aspect-ratio: 16/9;
     max-width: 800px;
     height: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
 #project .video-container .video {
@@ -107,6 +109,7 @@
     text-align: center;
     min-width: 300px;
     max-width: 500px;
+    margin-top: 0px;
 }
 #project .graph_container img {
     width: 100%;
@@ -115,4 +118,9 @@
 }
 #project .graph_container img:hover {
     filter: brightness(95%);
+}
+
+#project .graph_container figcaption {
+    font-style: italic;
+    margin: 10px;
 }
