--- a/mywebsite/src/assets/css/pages/projects.css
+++ b/mywebsite/src/assets/css/pages/projects.css
@@ -62,6 +62,42 @@
     transition: transform 0.3s ease;
 }
 
+#project .link-row {
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+    margin-left: 10px;
+}
+
+#project .link-row p {
+    margin: 0px;
+    font-size: 15px;
+}
+
+#project .genre-row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 5px;
+    margin-left: 10px;
+    margin-top: -5px;
+    margin-bottom: 10px;
+}
+
+#project .genre-row .genre {
+    padding: 5px 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #f1f1f1;
+    color: #333;
+    cursor: pointer;
+}
+
+#project .genre-row .genre:hover {
+    background-color: rgba(241, 241, 241, 0.45);
+    transition: background-color 0.3s ease;
+}
+
 #project .content {
     display: flex;
     flex-wrap: wrap;
