--- a/mywebsite/src/assets/css/pages/projects.css
+++ b/mywebsite/src/assets/css/pages/projects.css
@@ -94,8 +94,9 @@
 }
 
 #project .genre-row .genre:hover {
-    background-color: rgba(241, 241, 241, 0.45);
-    transition: background-color 0.3s ease;
+    color: #f1f1f1;
+    background-color: rgb(22, 78, 124,0.9);
+    transition: background-color 0.5s ease, color 0.5s ease;
 }
 
 #project .content {
