Finished implement/test pdflinks in projects

--- a/mywebsite/src/assets/css/pages/projects.css
+++ b/mywebsite/src/assets/css/pages/projects.css
@@ -74,6 +74,13 @@
     font-size: 15px;
 }
 
+#project .pdf-links {
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+    margin-left: 10px;
+}
+
 #projects .tag-row {
     display: flex;
     flex-direction: row;
