--- a/mywebsite/src/HomePage/assets/css/sections/contactmesection.css
+++ b/mywebsite/src/HomePage/assets/css/sections/contactmesection.css
@@ -1,6 +1,7 @@
 .contact-me-section {
     width: 100%;
     max-width: 1200px;
+    min-width: 350px;
     display: flex;
     flex-direction: column;
     gap: 25px;
