--- a/mywebsite/src/assets/css/main.css
+++ b/mywebsite/src/assets/css/main.css
@@ -23,7 +23,7 @@ h2 {
     font-size: 20px;
 }
 
-p, a {
+p, a, figcaption {
     font-family: 'Inter-Regular';
     font-size: 18px;
     margin: 0;
